# igdb

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
include/: debugger.hpp
include/libigdb/: libigdb.hpp
includes/: debugger.cpp
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  igdb.cpp  libigdb.cpp  vcpkg.json
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  igdb  igdb.cpp
